# mhs-embed

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  PKG_IMPL.md  README.md  TODO.md
mhs-embed/: MhsEmbed.cmake  README.md  mhs_ffi_override.c  vfs.c  vfs.h
mhs-embed/scripts/: mhs-embed.c  mhs-init-project.py  mhs-patch-xffi.py
projects/example/app/: Main.hs
projects/example/examples/: Main.hs
